--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.9",
     "element-plus": "^2.8.6",
-    "vue": "^3.5.10"
+    "sweetalert2": "^11.17.2",
+    "vue": "^3.5.10",
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
